--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,36 @@
 # Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
 .venv/
+env/
+venv/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Environment / credentials
 .env
+*.secret
 
-# VSCode
+# VSCode / IDE
 .vscode/
+.idea/
+*.swp
 
-# FastAPI/uvicorn
+# Logs
 *.log
+logs/
